# hmw5

./: .coverage  .gitignore  .travis.yml  app.py  celery_results.sqlite3  celerybeat-schedule  db.sqlite3  pyproject.toml  requirements  requirements.txt
hmw5/: celery.py  middleware.py  settings.py  urls.py
home/: admin.py  emails.py  filter.py  forms.py  models.py  serializers.py  signals.py  tasks.py  tests.py  views.py
home/migrations/: 0001_initial.py  0002_auto_20201217_0306.py  0002_student_birthday.py  0003_auto_20201211_0548.py  0003_student_social_url.py  0004_student_normalized_name.py  (+5 more)
htmlcov/: home___init___py.html  home_admin_py.html  home_apps_py.html  home_emails_py.html  home_filter_py.html  home_forms_py.html  home_migrations_0001_initial_py.html  home_migrations_0002_auto_20210125_1536_py.html  home_migrations_0003_auto_20210125_1545_py.html  home_migrations_0004_filter_py.html  home_migrations_0005_delete_filter_py.html  home_migrations_0006_currency_py.html  home_migrations_0007_student_picture_py.html  home_migrations_0008_auto_20210411_1047_py.html  home_migrations_0009_remove_student_updated_at_py.html  home_migrations_0010_remove_teacher_updated_at_py.html  home_migrations_0011_teacher_updated_at_py.html  home_migrations_0012_student_updated_at_py.html  home_migrations___init___py.html  home_models_py.html  home_serializers_py.html  home_signals_py.html  home_tasks_py.html  home_templates___init___py.html  home_templatetags___init___py.html  home_templatetags_poll_extras_py.html  home_tests_py.html  home_views_py.html  index.html  status.json
(+9 files in other folders)
